# ibus-input-pad

./: .gitignore  Makefile.am  README  TODO  configure.ac  ibus-input-pad.spec.in
debian/: README.source  changelog  control  copyright  ibus-input-pad.install  rules  watch
engine/: Makefile.am  engine.c  engine.h  i18n.h  input-pad.xml.in  main.c
m4/: Makefile.am  ibuslocale.m4
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.skip  de.po  el.po  es.po  fa.po  fi.po  fr.po  ibus-input-pad.pot  ja.po  ko.po  pl.po  pt_BR.po  si.po  te.po  tr.po  uk.po  zh_CN.po  zh_Hans.po  zh_TW.po
setup/: Makefile.am  ibus-setup-input-pad.desktop.in.in  ibus-setup-input-pad.gresource.xml  iconfig-gtk.c  iconfig-gtk.h  iconfig-gtk2.c  iconfig-gtk2.h  main.c  setup-gtk.c  setup-gtk.h  setup-gtk.ui  setup-gtk2.c  setup-gtk2.h  setup-gtk2.ui
